--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header class="header">
 
-        <a href="#" class="logo"><i class="fas fa-book"></i>E-LEARNING KUU.....</a>
+        <a href="#" class="logo"><i class="fas fa-book"></i>EduGI</a>
 
         <nav class="navbar">
             <a href="#home" class="hover-underline">home</a>
@@ -61,7 +61,7 @@
     <section class="home" id="home">
 
         <div class="content">
-            <h3>the best courses you will find here</h3>
+            <h3>Layanan konsultasi pendidikan daring</h3>
             <p>"Wise people learn when they can; fools learn when they must."</p>
             <a href="#" class="btn">
                 <span class="text text-1">learn more</span>
@@ -77,7 +77,7 @@
 
     <section class="about" id="about">
 
-        <h1 class="heading">about us</h1>
+        <h1 class="heading"></h1>
 
         <div class="container">
 
@@ -87,17 +87,23 @@
             </figure>
 
             <div class="about-content">
-                <h3>18 years of experience</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus aut impedit expedita aliquam 
-                    provident quod excepturi minus. Similique eveniet fugiat doloribus nisi saepe cupiditate iusto itaque totam! Officia, enim qui.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni voluptatum ipsa quod dolores officia at excepturi quas numquam vero dolorem vitae 
-                    veritatis quisquam fugit voluptates doloribus, id pariatur in ipsam?</p>    
+                <h3>PROFIL USAHA</h3>
+                <p>EduGI (Edukasi Religi) merupakan platform pembelajaran online yang memberikan layanan konsultasi pendidikan terkhusus pada pendidikan agama islam.</p>
+                <p>Menyediakan konten pembelajaran pendidikan agama islam yang inovatif dan relevan dengan kebutuhan peserta didik, serta membangun komunitas belajar yang interaktif dan mendukung.</p>    
                 <a href="#" class="btn">
                     <span class="text text-1">read more</span>
                     <span class="text text-2" aria-hidden="true">read more</span>
                 </a>        
-            </div>
-
+           <div class="about-content">
+    <div class="box">
+        <h3>VISI</h3>
+        <p>Menjadi platform pembelajaran daring terkemuka yang memberikan akses pendidikan Islam berkualitas tinggi dan terjangkau bagi semua orang kapan pun dan di mana pun.</p>
+        <h3>MISI</h3>
+        <p>1. Menyediakan konten pembelajaran yang inovatif dan relevan dengan kurikulum sekolah.</p>
+        <p>2. Membangun komunitas belajar yang interaktif dan mendukung.</p>
+        <p>3. Memberdayakan pendidik dan peserta didik melalui teknologi.</p>
+    </div>
+</div>
         </div>
 
     </section>
@@ -318,8 +324,8 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Syahrul</h3>
-                    <span>instructor</span>
+                    <h3>ELSA DEFITA SARI</h3>
+                    <span>FOUNDER AND INSTRUCTOR</span>
                 </div>
             </div>
 
@@ -333,8 +339,8 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Syahrul</h3>
-                    <span>instructor</span>
+                    <h3>FATHIYA RUHANNISA</h3>
+                    <span>INSTRUCTOR SKI AND FIQIH</span>
                 </div>
             </div>
 
@@ -348,8 +354,8 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Syahrul</h3>
-                    <span>instructor</span>
+                    <h3>SULFA SALSABILA ARUM</h3>
+                    <span>INSTRUCTOR BAHASA ARAB AND AL QUR'AN HADIS</span>
                 </div>
             </div>
 
@@ -363,8 +369,8 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Syahrul</h3>
-                    <span>instructor</span>
+                    <h3>PUTRI ULUL ALBAB ZEIN</h3>
+                    <span>INSTRUCTOR AQIDAH AKHLAK</span>
                 </div>
             </div>
 
